# auth_session

./: .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/auth/: run.py
src/auth/application/: constants.py  errors.py
src/auth/application/interactors/: admin_hello_world.py  log_in.py  log_out.py  sign_up.py  user_hello_world.py  verification.py
src/auth/application/interfaces/: identity_provider.py  password_hasher.py  request_manager.py  sender_letter.py  session_data_gateway.py  session_id_generator.py  session_manager.py  user_data_gateway.py  user_id_generator.py
src/auth/application/validators/: check_raw_password.py
src/auth/domain/: errors.py  user_role.py
src/auth/domain/entities/: session.py  user.py
src/auth/domain/interfaces/: str_session_id_generator.py
src/auth/domain/services/: session.py  user.py
src/auth/entrypoint/: config.py  setup.py
src/auth/entrypoint/ioc/: adapters.py  interactors.py  registry.py
src/auth/infrastructure/adapters/: email_sender_letter.py  identity_provider_session.py  identity_provider_sqla.py  password_hasher_bcrypt.py  session_data_mapper_sqla.py  session_id_generator_str.py  session_manager_redis.py  transaction_manager_sqla.py  user_data_mapper_sqla.py  user_id_generator_uuid.py
src/auth/infrastructure/persistence_sqla/alembic/: env.py
src/auth/infrastructure/persistence_sqla/alembic/versions/: 180554d1f581_init.py  29cda05bbc19_sessions12.py  4d0d906888d4_rbac.py  66c4dcaf9b0d_sessions123.py  8776e362ab52_verification.py
src/auth/infrastructure/persistence_sqla/mappings/: map.py  session.py  user.py
src/auth/presentation/http/adapters/: request_manager_cookie.py
src/auth/presentation/http/auth/: auth_router.py  log_in.py  log_out.py  sign_up.py  verification.py
src/auth/presentation/http/base/: cookie_params.py  error_handler.py  root_router.py
src/auth/presentation/http/hello_world/: admin.py  hello_world_router.py  user.py
src/auth/presentation/http/middlewares/: asgi_auth.py
tests/: conftest.py
tests/unit/application/interactors/: test_log_in.py  test_sign_up.py
tests/unit/application/validators/: test_check_raw_password.py
tests/unit/domain/: test_entities.py  test_user_role.py
