[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Web_sessions_auth"
version = "1.0.0"
requires-python = ">=3.12"
description = "Web sessions service"
license = { file = "LICENSE" }
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "dishka>=1.4.2",
    "fastapi[standard]>=0.115.7",
    "faststream[cli,rabbit]>=0.5.34",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg[async,binary]>=3.2.4",
    "redis>=5.2.1",
    "sqlalchemy[async]>=2.0.37",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.2",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
lint.ignore = ["B008"]
lint.select = ["E", "F", "I", "B"]
lint.fixable = ["ALL"]
target-version = "py312"
exclude = ["alembic"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["exam_tutor"]
skip = ["alembic"]
